--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -1,17 +1,23 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title>Pharma &mdash; Colorlib Template</title>
+  <title>PharmApp</title>
+  <link rel="icon" href="{% static 'themes_client/images/logo.jpg' %}" sizes="64x64 128x128" type="image/jpg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,700|Crimson+Text:400,400i" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'themes_client/fonts/icomoon/style.css' %}">
-  
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin="">
+  </script>
   <link rel="stylesheet" href="{% static 'themes_client/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'themes_client/css/magnific-popup.css' %}">
   <link rel="stylesheet" href="{% static 'themes_client/css/jquery-ui.css' %}">
@@ -19,7 +25,6 @@
   <link rel="stylesheet" href="{% static 'themes_client/css/owl.theme.default.min.css' %}">
   <link rel="stylesheet" href="{% static 'themes_client/css/aos.css' %}">
   <link rel="stylesheet" href="{% static 'themes_client/css/style.css' %}"> <!-- Assurez-vous que ce fichier est le dernier -->
-  <link rel="preload" href="{% static 'themes_client/images/R.jpg' %}" as="image">
 
     
 
@@ -62,9 +67,9 @@
               <ul class="site-menu js-clone-nav d-none d-lg-block">
                 <li class="active"><a href="{% url 'liste_medicaments_client' %}">Acceuil</a></li>
                 <li><a href="{% url 'shop' %}">Boutique</a></li>
-                <li><a href="{% url 'inscription_client' %}">Commander</a></li>
-                <li><a href="{% url 'about' %}">A Propos De Nous</a></li>
+                <li><a href="{% url 'about' %}">A Propos</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
+                <li><a href="{% url 'redirection_commande' %}">Commander</a></li>
               </ul>
             </nav>
           </div>
@@ -77,13 +82,51 @@
             <a href="#" class="site-menu-toggle js-menu-toggle ml-3 d-inline-block d-lg-none"><span
                 class="icon-menu"></span></a>
           </div>
+          <div class="user dropdown d-flex" id="user">
+            {% if request.session.user_name and request.session.user_email %}
+                <!-- User is logged in -->
+                <a role="button" data-toggle="dropdown" data-target="#" href="">
+                    <i class="bi bi-person-fill"></i>
+                    <span>Déconnexion</span>
+                </a>
+
+                <ul class="dropdown-menu user-profile" role="menu" aria-labelledby="dLabel">
+                    <div class="user-heading">
+                        <div class="user-name2">{{ request.session.user_name }}</div>
+                        <div class="user-email2">{{ request.session.user_email }}</div>
+                    </div>
+                    <div class="user-wrapper">
+                        <li class="divider"></li>
+                        <a class="content a-sign dropdown-item" href="{% url 'deconnexion' %}" id="a-user">
+                            <div class="drop-item">
+                                <div class="row row-user" style="margin-top: 5px">
+                                    <div class="">
+                                        <i class="fa fa-sign-out" id="fa-sign"></i>
+                                    </div>
+                                    <div class="p-user">
+                                        <p>Déconnexion</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </ul>
+            {% else %}
+                <!-- User is not logged in -->
+                <a href="{% url 'page_connexion' %}">
+                    <i class="bi bi-person-fill"></i>
+                    <span>Connexion</span>
+                </a>
+            {% endif %}
+        </div>
+
         </div>
       </div>
     </div>
 
     {% block content %}
-
-      <div class="site-blocks-cover" id="slider" style="background-image: url({% static '/images/Back.jpg' %});"themes_client>
+      <div>
+        <div class="site-blocks-cover" id="slider" style="background-image: url({% static 'themes_client/images/Back2.jpg' %});">
         <div class="container">
           <div class="row">
             <div class="col-lg-7 mx-auto order-lg-2 align-self-center">
@@ -261,12 +304,11 @@
 
           </div>
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-            <h3 class="footer-heading mb-4">Liens</h3>
+            <h3 class="footer-heading mb-4">Nos devises</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Supplements</a></li>
-              <li><a href="#">Vitamins</a></li>
-              <li><a href="#">Diet &amp; Nutrition</a></li>
-              <li><a href="#">Tea &amp; Coffee</a></li>
+              <li class="email">Qualité</li>
+              <li class="email">Confiance</li>
+              <li class="email">Service</li>
             </ul>
           </div>
 
@@ -274,8 +316,8 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Contact</h3>
               <ul class="list-unstyled">
-                <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                <li class="phone"><a href="tel://96926150">+228 22232324</a></li>
+                <li class="address">Rue Bodjona Agbalepedo lossossimé</li>
+                <li class="phone"><a href="tel://96926150">+228 96741711<br>+228 96926150</a></li>
                 <li class="email">pharmapp@hotmail.com</li>
               </ul>
             </div>
