--- a/frontend/templates/themes_client/inscription_client.html
+++ b/frontend/templates/themes_client/inscription_client.html
@@ -6,48 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="{% static 'themes_admin/font/icon.js' %}" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'themes_admin/css/bootstrap.min.css'%}">
-    <script src="{% static 'themes_admin/js/popper.min.js'%}"></script>
     <link rel="stylesheet" href="{% static 'themes_admin/css/master.css' %}">
     <link rel="stylesheet" href="{% static 'themes_admin/css/login.css' %}">
     <title>PharmApp</title>
-    <link rel="icon" href="{% static 'themes_admin/img/logo.png' %}" sizes="16x16 32x32" type="image/png">
+    <link rel="icon" href="{% static 'themes_admin/img/logo.jpg' %}" sizes="64x64 128x128" type="image/jpg">
+    <style>
+        body {
+            background-color: #f7f7f9; /* Couleur de fond de la page */
+        }
+        .card {
+            max-width: 200px; /* Réduit encore plus la largeur de la carte */
+            margin: auto;
+            border-radius: 8px;
+            box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+            transition: box-shadow 0.3s ease, transform 0.3s ease;
+        }
+        .card:hover {
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+            transform: scale(1.02);
+        }
+        .card-body {
+            padding: 5px; /* Réduit encore plus le padding interne */
+        }
+        .form-group {
+            margin-bottom: 4px; /* Réduit l'espacement entre les champs du formulaire */
+        }
+        button {
+            font-size: 7px; /* Taille de la police du bouton */
+            padding: 4px; /* Réduit le padding du bouton */
+        }
+        h1 {
+            font-size: 32px; /* Réduit la taille de la police du titre */
+            margin-bottom: 12px;
+            font-weight: bold;
+        }
+        .img-fluid {
+            max-width: 100%; /* Assure que l'image s'adapte à la largeur disponible */
+            height: auto; /* Conserve les proportions de l'image */
+        }
+    </style>
 </head>
 <body>
     <!-- Start Body -->
-    <div class="body-page" id="body-page">
-        <div class="login">
+    <div class="container body-page" id="body-page">
+        <div class="login row justify-content-center align-items-center min-vh-100">
             <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-lg-6 d-none d-xl-block d-lg-block">
-                            <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-thumbnail" style="margin-top: 150px;">
-                        </div> 
-                        <div class="col-lg-6">
-                            <h1>Veuillez vous inscrire avant d'effectuer une commande</h1>
-                            <form method="post">
-                                {% csrf_token %}
-                                {{ form.non_field_errors }}
-                                <div>
-                                    {{ form.nomUtilisateur.label_tag }} {{ form.nomUtilisateur }}
-                                </div>
-                                <div>
-                                    {{ form.emailUtilisateur.label_tag }} {{ form.emailUtilisateur }}
-                                </div>
-                                <div>
-                                    {{ form.numeroUtilisateur.label_tag }} {{ form.numeroUtilisateur }}
-                                </div>
-                                <div>
-                                    {{ form.motDePasse.label_tag }} {{ form.motDePasse }}
-                                </div>
-                                <div>
-                                    {{ form.role }}  <!-- Ce champ est caché -->
-                                </div>
-                                <button type="submit">S'inscrire</button>
-                                <p class="text-center">Vous avez déjà un compte ? <a href="{% url 'page_connexion' %}">Connectez-vous ici</a></p>
-                            </form>
-                        </div>
+                <div class="card-body row">
+                    <div class="col-lg-6 d-none d-lg-block">
+                        <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-fluid rounded" alt="Login Image">
+                    </div> 
+                    <div class="col-lg-6">
+                        <h1 class="mb-3">Inscrivez-vous pour passer une commande</h1>
+                        <form method="post">
+                            {% csrf_token %}
+                            {{ form.non_field_errors }}
+                            <div class="form-group">
+                                {{ form.nomUtilisateur.label_tag }} {{ form.nomUtilisateur }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.emailUtilisateur.label_tag }} {{ form.emailUtilisateur }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.numeroUtilisateur.label_tag }} {{ form.numeroUtilisateur }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.motDePasse.label_tag }} {{ form.motDePasse }}
+                            </div>
+                            <div>
+                                {{ form.role }}  <!-- Ce champ est caché -->
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block">S'inscrire</button>
+                            <p class="text-center mt-2">Déjà inscrit ? <a href="{% url 'page_connexion' %}">Connectez-vous</a></p>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -56,6 +87,7 @@
     <!-- End Body -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi/tOPQIbA4QAI5" crossorigin="anonymous"></script>
+    <script src="{% static 'themes_admin/js/popper.min.js'%}"></script>
 </body>
 </html>
